fix janked modal buttons on mobile

--- a/frontend/components/Overlays/Modal.styl
+++ b/frontend/components/Overlays/Modal.styl
@@ -31,7 +31,7 @@
   }
 
   .modalButtons {
-    padding: 0 1em 1em;
+    padding: 0 0 1em 0;
     display: flex;
   }
 }
